--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1160,6 +1160,9 @@
             </intent-filter>
         </activity>
 
+
+
+
         <!-- Development settings -->
 
         <activity android:name="DebugIntentSender" android:label="@string/debug_intent_sender_label">
@@ -1348,33 +1351,12 @@
             android:theme="@style/CryptKeeperBlankTheme"
         />
 
-        <!-- CyanogenMod activities Start -->
+        <!-- CyanogenMod activities -->
         <activity android:name=".cyanogenmod.LightLevelsActivity" />
-
         <activity android:name=".cyanogenmod.ThemesSettings" />
-
         <activity android:name=".cyanogenmod.SystemSettings" />
-
+        <activity android:name=".cyanogenmod.ProfilesSettings" />
         <activity android:name=".cyanogenmod.PerformanceSettings" />
-
-        <activity android:name=".profiles.ProfilesSettings" />
-
-        <activity android:name=".profiles.ProfileConfig" />
-
-        <activity android:name=".profiles.AppGroupList" />
-
-        <activity android:name=".profiles.AppGroupConfig" />
-
-        <activity android:name=".profiles.ProfileGroupConfig" />
-
-        <activity android:name="Settings$AnonymousStatsActivity"
-                android:label="@string/anonymous_statistics_title"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:clearTaskOnLaunch="true">
-            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
-                android:value="com.android.settings.cmstats.AnonymousStats" />
-        </activity>
-        <!-- CyanogenMod activities End -->
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
