--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -913,6 +913,23 @@
 
         <activity android:name="ChooseLockPatternTutorial" android:exported="false"/>
 
+        <!-- Anonymous Statistics -->
+        <receiver android:name=".cmstats.ReportingServiceManager"
+            android:enabled="true"
+            android:exported="false"
+            android:label="ReportingServiceManager">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
+
+        <service android:label="ReportingService"
+            android:enabled="true"
+            android:exported="false"
+            android:name=".cmstats.ReportingService">
+        </service>
+
         <!-- Runs in the phone process since it needs access to the Phone object -->
         <activity android:name=".deviceinfo.Status"
                 android:label="@string/device_status_activity_title"
@@ -945,8 +962,7 @@
 
         <activity android:name="Settings$ApnEditorActivity"
                 android:label="@string/apn_edit"
-                android:clearTaskOnLaunch="true"
-                android:theme="@android:style/Theme.Holo.DialogWhenLarge">
+                android:clearTaskOnLaunch="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.EDIT" />
