--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1352,14 +1352,15 @@
             android:theme="@style/CryptKeeperBlankTheme"
         />
 
+        <!-- Playground activities Start -->
+        <activity android:name=".playground.PlaygroundPanel" />
+
         <!-- CyanogenMod activities Start -->
         <activity android:name=".cyanogenmod.LightLevelsActivity" />
 
         <activity android:name=".cyanogenmod.ThemesSettings" />
 
         <activity android:name=".cyanogenmod.SystemSettings" />
-
-        <activity android:name=".cyanogenmod.ThePlayground" />
 
         <activity android:name=".cyanogenmod.PerformanceSettings" />
 
