--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1354,6 +1354,7 @@
 
         <!-- Playground activities Start -->
         <activity android:name=".playground.PlaygroundPanel"
+            android:configChanges="orientation|keyboard|keyboardHidden"
             android:label="@string/playground_panel_title">
             <intent-filter>
                 <category android:name="android.intent.category.VOICE_LAUNCH" />
