--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1385,6 +1385,8 @@
 
         <activity android:name=".ApnEditor" />
 
+        <activity android:name=".notificationlight.NotificationLightSettings" />
+
         <activity android:name="Settings$AnonymousStatsActivity"
                 android:label="@string/anonymous_statistics_title"
                 android:configChanges="orientation|keyboardHidden|screenSize"
