--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1362,6 +1362,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".playground.PlaygroundThemes" />
+
         <!-- CyanogenMod activities Start -->
         <activity android:name=".cyanogenmod.LightLevelsActivity" />
 
